--- a/Fall2018.md
+++ b/Fall2018.md
@@ -3,6 +3,7 @@ title: "Teaching"
 summary: "Teaching"
 date: 2018-09-17
 layout: default
+search_omit: true
 ---
 #### CS 350 Computer Organization & Assembly Language Programming (Fall 2018)
 
